--- a/src/main/resources/assets/beholdersvariations/lang/en_us.json
+++ b/src/main/resources/assets/beholdersvariations/lang/en_us.json
@@ -240,5 +240,17 @@
 	"block.beholdersvariations.refined_obsidian_wall": "Refined Obsidian Wall",
 	"block.beholdersvariations.refined_obsidian_brick_wall": "Refined Obsidian Brick Wall",
 	"block.beholdersvariations.refined_obsidian_tiling_wall": "Refined Obsidian Tiling Wall",
-	"block.beholdersvariations.smooth_refined_obsidian_wall": "Smooth Refined Obsidian Wall"
+	"block.beholdersvariations.smooth_refined_obsidian_wall": "Smooth Refined Obsidian Wall",
+	"block.beholdersvariations.amber_wall": "Amber Wall",
+	"block.beholdersvariations.amber_brick_wall": "Amber Brick Wall",
+	"block.beholdersvariations.amber_tiling_wall": "Amber Tiling Wall",
+	"block.beholdersvariations.smooth_amber_wall": "Smooth Amber Wall",
+	"block.beholdersvariations.jade_wall": "Jade Wall",
+	"block.beholdersvariations.jade_brick_wall": "Jade Brick Wall",
+	"block.beholdersvariations.jade_tiling_wall": "Jade Tiling Wall",
+	"block.beholdersvariations.smooth_jade_wall": "Smooth Jade Wall",
+	"block.beholdersvariations.prism_quartz_wall": "Prism Quartz Wall",
+	"block.beholdersvariations.prism_quartz_brick_wall": "Prism Quartz Brick Wall",
+	"block.beholdersvariations.prism_quartz_tiling_wall": "Prism Quartz Tiling Wall",
+	"block.beholdersvariations.smooth_prism_quartz_wall": "Smooth Prism Quartz Wall"
 }
