Vitric Sandstone, Red Sandstone, Black Sandstone, and Soulsandstone Walls

--- a/src/main/resources/assets/beholdersvariations/lang/en_us.json
+++ b/src/main/resources/assets/beholdersvariations/lang/en_us.json
@@ -241,6 +241,15 @@
 	"block.beholdersvariations.refined_obsidian_brick_wall": "Refined Obsidian Brick Wall",
 	"block.beholdersvariations.refined_obsidian_tiling_wall": "Refined Obsidian Tiling Wall",
 	"block.beholdersvariations.smooth_refined_obsidian_wall": "Smooth Refined Obsidian Wall",
+	"block.beholdersvariations.quartz_tiling_wall": "Quartz Tiling Wall",
+	"block.beholdersvariations.prismarine_tiling_wall": "Prismarine Tiling Wall",
+	"block.beholdersvariations.dark_prismarine_brick_wall": "Dark Prismarine Brick Wall",
+	"block.beholdersvariations.vitric_prismarine_wall": "Vitric Prismarine Wall",
+	"block.beholdersvariations.vitric_prismarine_brick_wall": "Vitric Prismarine Brick Wall",
+	"block.beholdersvariations.smooth_vitric_prismarine_wall": "Smooth Vitric Prismarine Wall",
+	"block.beholdersvariations.vitric_dark_prismarine_wall": "Vitric Dark Prismarine Wall",
+	"block.beholdersvariations.vitric_dark_prismarine_brick_wall": "Vitric Dark Prismarine Brick Wall",
+	"block.beholdersvariations.smooth_vitric_dark_prismarine_wall": "Smooth Vitric Dark Prismarine Wall",
 	"block.beholdersvariations.amber_wall": "Amber Wall",
 	"block.beholdersvariations.amber_brick_wall": "Amber Brick Wall",
 	"block.beholdersvariations.amber_tiling_wall": "Amber Tiling Wall",
@@ -252,5 +261,21 @@
 	"block.beholdersvariations.prism_quartz_wall": "Prism Quartz Wall",
 	"block.beholdersvariations.prism_quartz_brick_wall": "Prism Quartz Brick Wall",
 	"block.beholdersvariations.prism_quartz_tiling_wall": "Prism Quartz Tiling Wall",
-	"block.beholdersvariations.smooth_prism_quartz_wall": "Smooth Prism Quartz Wall"
+	"block.beholdersvariations.smooth_prism_quartz_wall": "Smooth Prism Quartz Wall",
+	"block.beholdersvariations.vitric_sandstone_wall": "Vitric Sandstone Wall",
+	"block.beholdersvariations.vitric_sandstone_brick_wall": "Vitric Sandstone Brick Wall",
+	"block.beholdersvariations.vitric_sandstone_tiling_wall": "Vitric Sandstone Tiling Wall",
+	"block.beholdersvariations.smooth_vitric_sandstone_wall": "Smooth Vitric Sandstone Wall",
+	"block.beholdersvariations.vitric_red_sandstone_wall": "Vitric Red Sandstone Wall",
+	"block.beholdersvariations.vitric_red_sandstone_brick_wall": "Vitric Red Sandstone Brick Wall",
+	"block.beholdersvariations.vitric_red_sandstone_tiling_wall": "Vitric Red Sandstone Tiling Wall",
+	"block.beholdersvariations.smooth_vitric_red_sandstone_wall": "Smooth Vitric Red Sandstone Wall",
+	"block.beholdersvariations.vitric_soulsandstone_wall": "Vitric Soulsandstone Wall",
+	"block.beholdersvariations.vitric_soulsandstone_brick_wall": "Vitric Soulsandstone Brick Wall",
+	"block.beholdersvariations.vitric_soulsandstone_tiling_wall": "Vitric Soulsandstone Tiling Wall",
+	"block.beholdersvariations.smooth_vitric_soulsandstone_wall": "Smooth Vitric Soulsandstone Wall",
+	"block.beholdersvariations.vitric_black_sandstone_wall": "Vitric Black Sandstone Wall",
+	"block.beholdersvariations.vitric_black_sandstone_brick_wall": "Vitric Black Sandstone Brick Wall",
+	"block.beholdersvariations.vitric_black_sandstone_tiling_wall": "Vitric Black Sandstone Tiling Wall",
+	"block.beholdersvariations.smooth_vitric_black_sandstone_wall": "Smooth Vitric Black Sandstone Wall"
 }
